[package]
name = "waverly"
version = "1.0.0"
edition = "2021"
description = "Parse and write WAV files"
license = "MIT"
authors = ["aef-"]
repository = "https://github.com/fraihaav/waverly/"
exclude = ["meta/*"]

[features]
std = []

[dependencies]
binrw = { version = "0.8.4" }
num = { version = "0.4", default-features = false }
