[package]
name = "waverly"
version = "0.2.0"
edition = "2021"
description = "Parse and write WAV files"
license = "MIT"
authors = ["aef-"]
repository = "https://github.com/fraihaav/waverly/"
exclude = ["meta/*"]

[features]
std = []

[dependencies]
binrw = { version = "0.8.4", default-features=false }
